# Weather-API

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/src/: exceptions.py  settings.py
api/src/controllers/: queries.py
api/src/dao/: base.py  queries.py
api/src/db/: config.py  models.py
api/src/pages/: pages.py
api/src/schemas/: queries.py
api/src/utils/: utils.py
api/src/weather/: base.py  dependencies.py  dummy.py  owm.py
api/templates/: main.html
conf/: .env.example
migrations/versions/: 40b1971c5697_init_migration.py  59be72ab5f80_init_migration.py
tests/: conftest.py
tests/unit_tests/: test_api.py  test_db.py  test_owm.py
