[project]
name = "flamelingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "faker>=33.3.1",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "httpx-oauth>=0.16.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "pre-commit>=4.0.1",
    "psycopg>=3.2.4",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[tool.black]
line-length = 127
preview = true

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["api", "tests", "src"]

[tool.pytest.ini_options]
addopts = "-s"
pythonpath = ". api"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
